--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session":"1.9.1",
     "connect-mongo":"0.8.0",
     "bson":"*",
-    "connect-flash": "0.1.1"
+    "connect-flash": "0.1.1",
+    "markdown": "0.5.0"
   }
 }
